--- a/helm-chart/templates/Deployment.yaml
+++ b/helm-chart/templates/Deployment.yaml
@@ -19,3 +19,14 @@ spec:
           resources:
 {{ toYaml .Values.resources | indent 12 }}
           imagePullPolicy: Never
+          env:
+            - name: DB_NAME
+              value: {{ .Values.env.DB_NAME }}
+            - name: DB_USER
+              value: {{ .Values.env.DB_USER }}
+            - name: DB_PASSWORD
+              value: {{ .Values.env.DB_PASSWORD }}
+            - name: DB_HOST
+              value: {{ .Values.env.DB_HOST }}
+            - name: DB_PORT
+              value: {{ .Values.env.DB_PORT }}
