--- a/helm-chart/templates/Deployment.yaml
+++ b/helm-chart/templates/Deployment.yaml
@@ -13,20 +13,22 @@ spec:
       labels:
         app: {{ .Values.app.name }}
     spec:
+      nodeSelector:
+        node13: "yes"
       containers:
         - name: {{ .Values.app.name }}
           image: "{{ .Values.app.path }}:{{ .Values.app.version }}"
           resources:
 {{ toYaml .Values.resources | indent 12 }}
-          imagePullPolicy: Never
+          imagePullPolicy: Always
           env:
             - name: DB_NAME
-              value: {{ .Values.env.DB_NAME }}
+              value: postgres
             - name: DB_USER
-              value: {{ .Values.env.DB_USER }}
+              value: postgres
             - name: DB_PASSWORD
-              value: {{ .Values.env.DB_PASSWORD }}
+              value: password
             - name: DB_HOST
-              value: {{ .Values.env.DB_HOST }}
+              value: "10.110.248.73"
             - name: DB_PORT
-              value: {{ .Values.env.DB_PORT }}
+              value: "5432"
