--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -1,10 +1,10 @@
 replicas: 1
-namespace: mganin
+namespace: ns-03
 
 app:
-  name: "application"
-  path: "application"
-  version: "v8"
+  name: "server"
+  path: "geexmo/docker-images"
+  version: "server"
 
 resources:
   requests:
@@ -19,13 +19,13 @@ service:
   type: ClusterIP
   ports:
   - name: http
-    port: 5001
+    port: 5000
     protocol: TCP
-    targetPort: 5001
+    targetPort: 5000
 
 env:
     DB_NAME: postgres
     DB_USER: postgres
     DB_PASSWORD: password
-    DB_HOST: localhost
-    DB_PORT: 1234
+    DB_HOST: 10.110.248.73
+    DB_PORT: 5432
