--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -1,10 +1,10 @@
-replicas: 1
-namespace: ns-03
+replicas: 4
+namespace: ns-29
 
 app:
   name: "server"
   path: "geexmo/docker-images"
-  version: "server"
+  version: "server2"
 
 resources:
   requests:
